--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "php": ">=7.1",
         "tymon/jwt-auth": "1.*",
         "dingo/api": "^3.0",
-        "illuminate/hashing": "~5.7.*",
-        "illuminate/cookie": "~5.7.*",
-        "illuminate/routing": "~5.7.*",
-        "illuminate/http": "~5.7.*"
+        "illuminate/hashing": "^5.7.*",
+        "illuminate/cookie": "^5.7.*",
+        "illuminate/routing": "^5.7.*",
+        "illuminate/http": "^5.7.*"
     },
     "authors": [
         {
